Fix accessibility label for password in the settings.

- The string for masked password was using 'Black Circle' symbol instead of 'Bullet'.
- The accessibility label wasn't really set. Now 'Hidden, Password' is used in case the password is masked.

Bug: 829821
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I9f87acefbf9289406718701af6c688f0e49424c6
Reviewed-on: https://chromium-review.googlesource.com/1030633
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Reviewed-by: Sergio Collazos <sczs@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554363}
Former-commit-id: a19457e67a235b89a47f60a5356c63174a0e545a